--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,6 +45,7 @@ dependencies {
     implementation 'com.android.support:design:29.0.0'
     //implementation 'com.github.prolificinteractive:material-calendarview:2.0.0'
     implementation "com.google.android.gms:play-services-vision:17.0.2"
+    implementation 'com.google.android.material:material:1.3.0-alpha03'
 
 
 }
