--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,6 +46,8 @@ dependencies {
     //implementation 'com.github.prolificinteractive:material-calendarview:2.0.0'
     implementation "com.google.android.gms:play-services-vision:17.0.2"
     implementation 'com.google.android.material:material:1.3.0-alpha03'
+    implementation 'com.github.medyo:fancybuttons:1.8.3'
+
 
 
 }
